--- a/Pattantyus_Abraham_Geza_embed.html
+++ b/Pattantyus_Abraham_Geza_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -44,101 +45,101 @@ div.WordSection1
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0cm;text-align:center;
-line-height:normal'><b><span style='font-size:12.0pt'>Pattantyús Ábrahám Géza</span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt'>PattantyĂşs ĂbrahĂˇm GĂ©za</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
-style='font-family:"Helvetica",sans-serif'>Magyar gépészmérnök, akadémikus
-professzor, nemzetközileg elismert tudós és a gépészet egyik kiemelkedő
-személyisége. A gépek szinte áttekinthetetlen sokaságának rendszerezője, a
-magyar gépészeti szakirodalom gazdagítója, sokoldalúan képzett, művelt közéleti
-személyiség.</span></span></p>
+style='font-family:"Helvetica",sans-serif'>Magyar gĂ©pĂ©szmĂ©rnĂ¶k, akadĂ©mikus
+professzor, nemzetkĂ¶zileg elismert tudĂłs Ă©s a gĂ©pĂ©szet egyik kiemelkedĹ‘
+szemĂ©lyisĂ©ge. A gĂ©pek szinte Ăˇttekinthetetlen sokasĂˇgĂˇnak rendszerezĹ‘je, a
+magyar gĂ©pĂ©szeti szakirodalom gazdagĂ­tĂłja, sokoldalĂşan kĂ©pzett, mĹ±velt kĂ¶zĂ©leti
+szemĂ©lyisĂ©g.</span></span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Főbb művei</span></b></p>
+style='font-size:12.0pt'>FĹ‘bb mĹ±vei</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Emelőgépek
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>EmelĹ‘gĂ©pek
 (Bp., 1927)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Áramkörök (Bp.,
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>ĂramkĂ¶rĂ¶k (Bp.,
 1942)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A gépek
-üzemtana (Bp., 1944)</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A gĂ©pek
+ĂĽzemtana (Bp., 1944)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Felvonók (Bp.,
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>FelvonĂłk (Bp.,
 1945)</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Gépészeti
-lengéstan (Bp., 1952)</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>GĂ©pĂ©szeti
+lengĂ©stan (Bp., 1952)</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><img width=204
-height=247 id="Kép 1" src="Pattantyus_Abraham_Geza_embed_elemei/image001.png"></p>
+height=247 id="KĂ©p 1" src="Pattantyus_Abraham_Geza_embed_elemei/image001.png"></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-style='font-size:12.0pt'>Élete</span></b></p>
+style='font-size:12.0pt'>Ă‰lete</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>1885. december
-11-én született Selmecbányán. Illaván járt elemi iskolába. Budapesten
-érettségizett Királyi Katholikus Egyetemi Főgimnáziumban (ma: Budapesti
-Egyetemi Katolikus Gimnázium) 1903-ban, majd 1907-ben gépészmérnöki oklevelet
-szerzett a Királyi József Műegyetemen. Ezután Zipernowsky Károly professzor
-mellé került tanársegédnek az elektrotechnikai tanszékre. 1910-ben
-tanulmányutat tett Németországba, Angliába, Belgiumba és az Egyesült Államokba.
-Hazatérése után folyamatosan oktatott a József Műegyetemen. 1912-től a II.
-Gépszerkezettani Tanszék adjunktusaként tevékenykedett, majd 1930-ban
-kinevezték műegyetemi nyilvános rendes tanárnak a III. Gépszerkezettani
-Tanszékre. A tanszéket később Vízgépek Tanszékének nevezték el.</p>
+11-Ă©n szĂĽletett SelmecbĂˇnyĂˇn. IllavĂˇn jĂˇrt elemi iskolĂˇba. Budapesten
+Ă©rettsĂ©gizett KirĂˇlyi Katholikus Egyetemi FĹ‘gimnĂˇziumban (ma: Budapesti
+Egyetemi Katolikus GimnĂˇzium) 1903-ban, majd 1907-ben gĂ©pĂ©szmĂ©rnĂ¶ki oklevelet
+szerzett a KirĂˇlyi JĂłzsef MĹ±egyetemen. EzutĂˇn Zipernowsky KĂˇroly professzor
+mellĂ© kerĂĽlt tanĂˇrsegĂ©dnek az elektrotechnikai tanszĂ©kre. 1910-ben
+tanulmĂˇnyutat tett NĂ©metorszĂˇgba, AngliĂˇba, Belgiumba Ă©s az EgyesĂĽlt Ăllamokba.
+HazatĂ©rĂ©se utĂˇn folyamatosan oktatott a JĂłzsef MĹ±egyetemen. 1912-tĹ‘l a II.
+GĂ©pszerkezettani TanszĂ©k adjunktusakĂ©nt tevĂ©kenykedett, majd 1930-ban
+kineveztĂ©k mĹ±egyetemi nyilvĂˇnos rendes tanĂˇrnak a III. GĂ©pszerkezettani
+TanszĂ©kre. A tanszĂ©ket kĂ©sĹ‘bb VĂ­zgĂ©pek TanszĂ©kĂ©nek neveztĂ©k el.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A tanszéket
-Bánki Donát alapította 1899-ben, a tanszék neve Hidraulikai és Hidrogépek
-Tanszék volt. Első professzora Bánki Donát volt, akinek nevét határturbinájának
-elméleti kidolgozása tette ismertté. A kiváló konstruktőr feltaláló (porlasztó,
-motorok) Bánki 1922-ben hunyt el, és csak 1930-ban került professzori rangú
-oktató a Tanszék élére Pattantyús-Ábrahám Géza személyében, aki a műszaki
-felsőoktatásnak Magyarországon egyik legnevesebb mérnökpedagógusa.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>A tanszĂ©ket
+BĂˇnki DonĂˇt alapĂ­totta 1899-ben, a tanszĂ©k neve Hidraulikai Ă©s HidrogĂ©pek
+TanszĂ©k volt. ElsĹ‘ professzora BĂˇnki DonĂˇt volt, akinek nevĂ©t hatĂˇrturbinĂˇjĂˇnak
+elmĂ©leti kidolgozĂˇsa tette ismerttĂ©. A kivĂˇlĂł konstruktĹ‘r feltalĂˇlĂł (porlasztĂł,
+motorok) BĂˇnki 1922-ben hunyt el, Ă©s csak 1930-ban kerĂĽlt professzori rangĂş
+oktatĂł a TanszĂ©k Ă©lĂ©re PattantyĂşs-ĂbrahĂˇm GĂ©za szemĂ©lyĂ©ben, aki a mĹ±szaki
+felsĹ‘oktatĂˇsnak MagyarorszĂˇgon egyik legnevesebb mĂ©rnĂ¶kpedagĂłgusa.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Munkássága
-iránti tiszteletből róla nevezték el a Pattantyús gépész- és villamosmérnökök
-kézikönyve sorozatot, melynek szerkesztőbizottságát haláláig ő vezette.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>MunkĂˇssĂˇga
+irĂˇnti tiszteletbĹ‘l rĂłla neveztĂ©k el a PattantyĂşs gĂ©pĂ©sz- Ă©s villamosmĂ©rnĂ¶kĂ¶k
+kĂ©zikĂ¶nyve sorozatot, melynek szerkesztĹ‘bizottsĂˇgĂˇt halĂˇlĂˇig Ĺ‘ vezette.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Számos könyvvel
-gazdagította a magyar műszaki irodalmat, azonkívül kiterjesztette a tanszék
-tudományos kutatási profilját a pneumatikus anyagszállítás és a kétfázisú
-áramlások irányába. Pattantyús-Ábrahám Géza mérnökgenerációk nevelője, a
-„Pattantyús-iskola” megteremtője. Számos tankönyvet is írt, ezek közül
-kiemelkedik a Gépek üzemtana, ami tizennégy kiadást ért meg.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>SzĂˇmos kĂ¶nyvvel
+gazdagĂ­totta a magyar mĹ±szaki irodalmat, azonkĂ­vĂĽl kiterjesztette a tanszĂ©k
+tudomĂˇnyos kutatĂˇsi profiljĂˇt a pneumatikus anyagszĂˇllĂ­tĂˇs Ă©s a kĂ©tfĂˇzisĂş
+ĂˇramlĂˇsok irĂˇnyĂˇba. PattantyĂşs-ĂbrahĂˇm GĂ©za mĂ©rnĂ¶kgenerĂˇciĂłk nevelĹ‘je, a
+â€žPattantyĂşs-iskolaâ€ť megteremtĹ‘je. SzĂˇmos tankĂ¶nyvet is Ă­rt, ezek kĂ¶zĂĽl
+kiemelkedik a GĂ©pek ĂĽzemtana, ami tizennĂ©gy kiadĂˇst Ă©rt meg.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Tudományos
-munkáját a gyakorlattal való szoros kapcsolat jellemezte. A dugattyús
-szivattyúk légüstjének méretezésére kidolgozott eljárását az egész világon
-Pattantyús-módszerként ismerik. 1952-ben Kossuth-díjat kapott. Nagyon szerette
-a humort, ő volt az egyik fővédnöke az 1939-es Vicinális Dugóhúzó című vidám
-egyetemi kötetnek.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>TudomĂˇnyos
+munkĂˇjĂˇt a gyakorlattal valĂł szoros kapcsolat jellemezte. A dugattyĂşs
+szivattyĂşk lĂ©gĂĽstjĂ©nek mĂ©retezĂ©sĂ©re kidolgozott eljĂˇrĂˇsĂˇt az egĂ©sz vilĂˇgon
+PattantyĂşs-mĂłdszerkĂ©nt ismerik. 1952-ben Kossuth-dĂ­jat kapott. Nagyon szerette
+a humort, Ĺ‘ volt az egyik fĹ‘vĂ©dnĂ¶ke az 1939-es VicinĂˇlis DugĂłhĂşzĂł cĂ­mĹ± vidĂˇm
+egyetemi kĂ¶tetnek.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Pattantyús-Ábrahám
-Gézáról, a Műegyetem legendás professzoráról számos anekdota kering:</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>PattantyĂşs-ĂbrahĂˇm
+GĂ©zĂˇrĂłl, a MĹ±egyetem legendĂˇs professzorĂˇrĂłl szĂˇmos anekdota kering:</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Az utcán
-posztoló rendőr arra lesz figyelmes, hogy késő este, zárás után a Műegyetem
-kerítésén sorra másznak át hallgatóforma fiatalemberek. A rendőr kérdésére
-mindegyik így védekezik:</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Az utcĂˇn
+posztolĂł rendĹ‘r arra lesz figyelmes, hogy kĂ©sĹ‘ este, zĂˇrĂˇs utĂˇn a MĹ±egyetem
+kerĂ­tĂ©sĂ©n sorra mĂˇsznak Ăˇt hallgatĂłforma fiatalemberek. A rendĹ‘r kĂ©rdĂ©sĂ©re
+mindegyik Ă­gy vĂ©dekezik:</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>– A Patyi bácsinál
-vizsgáztam.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>â€“ A Patyi bĂˇcsinĂˇl
+vizsgĂˇztam.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Amikor úgy
-éjfél felé egy idős úr is igyekszik kifelé a kerítésen át, a rendőr dühösen
-rászól:</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>Amikor Ăşgy
+Ă©jfĂ©l felĂ© egy idĹ‘s Ăşr is igyekszik kifelĂ© a kerĂ­tĂ©sen Ăˇt, a rendĹ‘r dĂĽhĂ¶sen
+rĂˇszĂłl:</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>– Remélem, nem
-azt akarja mondani, hogy maga is a Patyi bácsinál vizsgázott.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>â€“ RemĂ©lem, nem
+azt akarja mondani, hogy maga is a Patyi bĂˇcsinĂˇl vizsgĂˇzott.</p>
 
-<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>– Nem kérem, én
-vagyok a Patyi bácsi.</p>
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>â€“ Nem kĂ©rem, Ă©n
+vagyok a Patyi bĂˇcsi.</p>
 
 </div>
 
