--- a/Voros_Imre_embed.html
+++ b/Voros_Imre_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -78,133 +79,133 @@ ul
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
-style='font-size:12.0pt;line-height:107%'>Vörös Imre</span></b></p>
+style='font-size:12.0pt;line-height:107%'>VĂ¶rĂ¶s Imre</span></b></p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Életpályája</span></b></p>
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Ă‰letpĂˇlyĂˇja</span></b></p>
 
-<p class=MsoNormal>Tisztviselő szülők gyermekeként született Budapesten,
-nagybátyjai között magas rangú katonatisztek is voltak, emiatt középiskolai
-tanulmányait egy gépipari technikumban végezte. 1963-ban kezdte meg egyetemi
-tanulmányait az Eötvös Loránd Tudományegyetem Állam- és Jogtudományi Karán,
-ahol 1968-ban szerzett állam- és jogtudományi doktorátust. Egyetemi évei alatt
-Eörsi Gyula volt rá nagy hatással. Diplomájának megszerzése után egy
-külkereskedelmi vállalatnál kezdett el dolgozni jogi előadóként. 1969-ben, Eörsi
-hívására, a Magyar Tudományos Akadémia Állam- és Jogtudományi Intézetébe
-került, ahol a nemzetközi magánjogi csoport munkatársa, tíz évvel később pedig
-tudományos főmunkatársa lett, közben Strasbourgban és Leydenben tanult
-ösztöndíjjal. 1984-ben intézeti munkájával párhuzamosan a frissen induló
-miskolci jogászképzésben vállalt szerepet: a Nehézipari Műszaki Egyetem
-nemzetközi magánjogi tanszékének docense lett. 1986 és 1988 között Freiburg im
-Breisgauban Humboldt-ösztöndíjjal folytatott kutatómunkát. 1990-ben vehette át
-egyetemi tanári kinevezését, ekkor távozott a JTI-ből. 1994 és 1998 között a
-tanszék vezetője volt. 1998-ban átment a győri Széchenyi István Főiskolára
-(azóta egyetem), ahol kezdetben tudományos főmunkatársként dolgozott, 1999-ben
-egyetemi tanári kinevezést kapott, 2000-ben pedig a nemzetközi magánjogi
-tanszék vezetője lett. 1992 és 1999 között a Közép-európai Egyetem
-vendégprofesszora volt. 2002-ben pedig a Károli Gáspár Református Egyetem
-Állam- és Jogtudományi Karának egyetemi tanára, 2003-ban pedig a nemzetközi
-magánjogi tanszék vezetője lett. 2008-ban vette át a kar doktori iskolájának
-vezetését. Ezzel párhuzamosan 2002-ben visszatért az MTA JTI-be, ahol
-tudományos főigazgató-helyettessé nevezték ki. 2013-ban nyugdíjba vonult.</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>1979-ben védte meg az állam- és jogtudományok kandidátusi,
-1989-ben pedig akadémiai doktori értekezését. Tagja lett az MTA Állam- és
-Jogtudományi Bizottságának, emellett 1984 és 1998 között a Miskolci Akadémiai
-Bizottság tagja is volt. 2010-ben a Magyar Tudományos Akadémia levelező,
-2016-ban pedig rendes tagjává választották. Akadémiai tisztségein túl 2001-ben
-bekerült a Szellemi Tulajdonvédelmi Tanácsba, 2002-ben pedig a Magyar
-Iparjogvédelmi Egyesület elnökévé választották. 1998 és 2004 között az Európai
-Jogakadémia elnökségének volt tagja. 1972-től a Jogtudományi Közlöny című jogi
-folyóirat egyik szerkesztője. A rendszerváltás utáni közéletben is aktív
-szerepet vállalt: 1989-ben az egyik szerkesztője volt az első versenyjogi
-törvénynek, amely többek között létrehozta a Gazdasági Versenyhivatalt.
-1990-ben az első alkotmánybíróvá választott jogtudósok egyike volt. Jelölését
-mindegyik párt támogatta. Alkotmánybírósági időszaka alatt részt vett a
-rendszerváltás számos törvényének alkotmányos felülvizsgálatában, összesen húsz
-alkalommal írt párhuzamos indokolást vagy különvéleményt. 1999-ig volt a
-testület tagja. Ezt követően a Magyar Kereskedelmi és Iparkamara mellett működő
-választottbíróság bírája lett, 2008-ban a bíróság egyik elnökségi tagjává
-választották. 2004-től pedig a Pénz- és Tőkepiaci Állandó Választottbíróság
-elnökségi tagja. Ezenkívül 1990-től a Keresztény Iskolatestvérek szerzetes
-tanítórend világi ügyvivője.</p>
+<p class=MsoNormal>TisztviselĹ‘ szĂĽlĹ‘k gyermekekĂ©nt szĂĽletett Budapesten,
+nagybĂˇtyjai kĂ¶zĂ¶tt magas rangĂş katonatisztek is voltak, emiatt kĂ¶zĂ©piskolai
+tanulmĂˇnyait egy gĂ©pipari technikumban vĂ©gezte. 1963-ban kezdte meg egyetemi
+tanulmĂˇnyait az EĂ¶tvĂ¶s LorĂˇnd TudomĂˇnyegyetem Ăllam- Ă©s JogtudomĂˇnyi KarĂˇn,
+ahol 1968-ban szerzett Ăˇllam- Ă©s jogtudomĂˇnyi doktorĂˇtust. Egyetemi Ă©vei alatt
+EĂ¶rsi Gyula volt rĂˇ nagy hatĂˇssal. DiplomĂˇjĂˇnak megszerzĂ©se utĂˇn egy
+kĂĽlkereskedelmi vĂˇllalatnĂˇl kezdett el dolgozni jogi elĹ‘adĂłkĂ©nt. 1969-ben, EĂ¶rsi
+hĂ­vĂˇsĂˇra, a Magyar TudomĂˇnyos AkadĂ©mia Ăllam- Ă©s JogtudomĂˇnyi IntĂ©zetĂ©be
+kerĂĽlt, ahol a nemzetkĂ¶zi magĂˇnjogi csoport munkatĂˇrsa, tĂ­z Ă©vvel kĂ©sĹ‘bb pedig
+tudomĂˇnyos fĹ‘munkatĂˇrsa lett, kĂ¶zben Strasbourgban Ă©s Leydenben tanult
+Ă¶sztĂ¶ndĂ­jjal. 1984-ben intĂ©zeti munkĂˇjĂˇval pĂˇrhuzamosan a frissen indulĂł
+miskolci jogĂˇszkĂ©pzĂ©sben vĂˇllalt szerepet: a NehĂ©zipari MĹ±szaki Egyetem
+nemzetkĂ¶zi magĂˇnjogi tanszĂ©kĂ©nek docense lett. 1986 Ă©s 1988 kĂ¶zĂ¶tt Freiburg im
+Breisgauban Humboldt-Ă¶sztĂ¶ndĂ­jjal folytatott kutatĂłmunkĂˇt. 1990-ben vehette Ăˇt
+egyetemi tanĂˇri kinevezĂ©sĂ©t, ekkor tĂˇvozott a JTI-bĹ‘l. 1994 Ă©s 1998 kĂ¶zĂ¶tt a
+tanszĂ©k vezetĹ‘je volt. 1998-ban Ăˇtment a gyĹ‘ri SzĂ©chenyi IstvĂˇn FĹ‘iskolĂˇra
+(azĂłta egyetem), ahol kezdetben tudomĂˇnyos fĹ‘munkatĂˇrskĂ©nt dolgozott, 1999-ben
+egyetemi tanĂˇri kinevezĂ©st kapott, 2000-ben pedig a nemzetkĂ¶zi magĂˇnjogi
+tanszĂ©k vezetĹ‘je lett. 1992 Ă©s 1999 kĂ¶zĂ¶tt a KĂ¶zĂ©p-eurĂłpai Egyetem
+vendĂ©gprofesszora volt. 2002-ben pedig a KĂˇroli GĂˇspĂˇr ReformĂˇtus Egyetem
+Ăllam- Ă©s JogtudomĂˇnyi KarĂˇnak egyetemi tanĂˇra, 2003-ban pedig a nemzetkĂ¶zi
+magĂˇnjogi tanszĂ©k vezetĹ‘je lett. 2008-ban vette Ăˇt a kar doktori iskolĂˇjĂˇnak
+vezetĂ©sĂ©t. Ezzel pĂˇrhuzamosan 2002-ben visszatĂ©rt az MTA JTI-be, ahol
+tudomĂˇnyos fĹ‘igazgatĂł-helyettessĂ© neveztĂ©k ki. 2013-ban nyugdĂ­jba vonult.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Díjai,
-elismerései</span></b></p>
+<p class=MsoNormal>1979-ben vĂ©dte meg az Ăˇllam- Ă©s jogtudomĂˇnyok kandidĂˇtusi,
+1989-ben pedig akadĂ©miai doktori Ă©rtekezĂ©sĂ©t. Tagja lett az MTA Ăllam- Ă©s
+JogtudomĂˇnyi BizottsĂˇgĂˇnak, emellett 1984 Ă©s 1998 kĂ¶zĂ¶tt a Miskolci AkadĂ©miai
+BizottsĂˇg tagja is volt. 2010-ben a Magyar TudomĂˇnyos AkadĂ©mia levelezĹ‘,
+2016-ban pedig rendes tagjĂˇvĂˇ vĂˇlasztottĂˇk. AkadĂ©miai tisztsĂ©gein tĂşl 2001-ben
+bekerĂĽlt a Szellemi TulajdonvĂ©delmi TanĂˇcsba, 2002-ben pedig a Magyar
+IparjogvĂ©delmi EgyesĂĽlet elnĂ¶kĂ©vĂ© vĂˇlasztottĂˇk. 1998 Ă©s 2004 kĂ¶zĂ¶tt az EurĂłpai
+JogakadĂ©mia elnĂ¶ksĂ©gĂ©nek volt tagja. 1972-tĹ‘l a JogtudomĂˇnyi KĂ¶zlĂ¶ny cĂ­mĹ± jogi
+folyĂłirat egyik szerkesztĹ‘je. A rendszervĂˇltĂˇs utĂˇni kĂ¶zĂ©letben is aktĂ­v
+szerepet vĂˇllalt: 1989-ben az egyik szerkesztĹ‘je volt az elsĹ‘ versenyjogi
+tĂ¶rvĂ©nynek, amely tĂ¶bbek kĂ¶zĂ¶tt lĂ©trehozta a GazdasĂˇgi Versenyhivatalt.
+1990-ben az elsĹ‘ alkotmĂˇnybĂ­rĂłvĂˇ vĂˇlasztott jogtudĂłsok egyike volt. JelĂ¶lĂ©sĂ©t
+mindegyik pĂˇrt tĂˇmogatta. AlkotmĂˇnybĂ­rĂłsĂˇgi idĹ‘szaka alatt rĂ©szt vett a
+rendszervĂˇltĂˇs szĂˇmos tĂ¶rvĂ©nyĂ©nek alkotmĂˇnyos felĂĽlvizsgĂˇlatĂˇban, Ă¶sszesen hĂşsz
+alkalommal Ă­rt pĂˇrhuzamos indokolĂˇst vagy kĂĽlĂ¶nvĂ©lemĂ©nyt. 1999-ig volt a
+testĂĽlet tagja. Ezt kĂ¶vetĹ‘en a Magyar Kereskedelmi Ă©s Iparkamara mellett mĹ±kĂ¶dĹ‘
+vĂˇlasztottbĂ­rĂłsĂˇg bĂ­rĂˇja lett, 2008-ban a bĂ­rĂłsĂˇg egyik elnĂ¶ksĂ©gi tagjĂˇvĂˇ
+vĂˇlasztottĂˇk. 2004-tĹ‘l pedig a PĂ©nz- Ă©s TĹ‘kepiaci ĂllandĂł VĂˇlasztottbĂ­rĂłsĂˇg
+elnĂ¶ksĂ©gi tagja. EzenkĂ­vĂĽl 1990-tĹ‘l a KeresztĂ©ny IskolatestvĂ©rek szerzetes
+tanĂ­tĂłrend vilĂˇgi ĂĽgyvivĹ‘je.</p>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>DĂ­jai,
+elismerĂ©sei</span></b></p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-18.0pt'>1.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Osztrák
-Köztársaság Nagy Ezüst Érdemrendje (1994)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>OsztrĂˇk
+KĂ¶ztĂˇrsasĂˇg Nagy EzĂĽst Ă‰rdemrendje (1994)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>2.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>a
-Magyar Köztársasági Érdemrend középkeresztje a csillaggal (1999)</p>
+Magyar KĂ¶ztĂˇrsasĂˇgi Ă‰rdemrend kĂ¶zĂ©pkeresztje a csillaggal (1999)</p>
 
 <p class=MsoListParagraphCxSpLast style='text-indent:-18.0pt'>3.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Akadémiai
-Díj (2007)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>AkadĂ©miai
+DĂ­j (2007)</p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Főbb
-publikációi</span></b></p>
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>FĹ‘bb
+publikĂˇciĂłi</span></b></p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-18.0pt'>1.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>A
-külkereskedelmi és a belföldi vállalatok szerződései (társszerző, 1977)</p>
+kĂĽlkereskedelmi Ă©s a belfĂ¶ldi vĂˇllalatok szerzĹ‘dĂ©sei (tĂˇrsszerzĹ‘, 1977)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>2.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>A
-szocialista piaci magatartás joga – versenyjog szerződései (1981)</p>
+szocialista piaci magatartĂˇs joga â€“ versenyjog szerzĹ‘dĂ©sei (1981)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>3.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Beruházások
-versenytárgyalás útján (1984)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>BeruhĂˇzĂˇsok
+versenytĂˇrgyalĂˇs ĂştjĂˇn (1984)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>4.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Verseny,
-kartell, ár (1991)</p>
+kartell, Ăˇr (1991)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>5.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>A
-tulajdonhoz való jog (1994)</p>
+tulajdonhoz valĂł jog (1994)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>6.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Nemzetközi
-kooperációs szerződések (1995)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>NemzetkĂ¶zi
+kooperĂˇciĂłs szerzĹ‘dĂ©sek (1995)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>7.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Az
-európai versenyjogok kézikönyve (1996)</p>
+eurĂłpai versenyjogok kĂ©zikĂ¶nyve (1996)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>8.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Nemzetközi
-kollíziós magánjog (társszerző, első kiadás 1997)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>NemzetkĂ¶zi
+kollĂ­ziĂłs magĂˇnjog (tĂˇrsszerzĹ‘, elsĹ‘ kiadĂˇs 1997)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>9.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Dixi
-et salvavi – különvélemények (2000)</p>
+et salvavi â€“ kĂĽlĂ¶nvĂ©lemĂ©nyek (2000)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>10.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A nemzetközi gazdasági
-kapcsolatok joga I–III. (2004)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A nemzetkĂ¶zi gazdasĂˇgi
+kapcsolatok joga Iâ€“III. (2004)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>11.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Az EU-elnökség
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Az EU-elnĂ¶ksĂ©g
 (szerk., 2010)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>12.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Csoportkép Laokoónnal.
-A magyar jogrendszer és az alkotmánybíráskodás vívódása az európai joggal
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>CsoportkĂ©p LaokoĂłnnal.
+A magyar jogrendszer Ă©s az alkotmĂˇnybĂ­rĂˇskodĂˇs vĂ­vĂłdĂˇsa az eurĂłpai joggal
 (2012)</p>
 
 <p class=MsoListParagraphCxSpLast style='text-indent:-18.0pt'>13.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A történeti alkotmány
-az Alkotmánybíróság gyakorlatában. Székfoglaló előadások a Magyar Tudományos
-Akadémián (2016)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A tĂ¶rtĂ©neti alkotmĂˇny
+az AlkotmĂˇnybĂ­rĂłsĂˇg gyakorlatĂˇban. SzĂ©kfoglalĂł elĹ‘adĂˇsok a Magyar TudomĂˇnyos
+AkadĂ©miĂˇn (2016)</p>
 
-<p class=MsoNormal><img width=364 height=364 id="Kép 1"
+<p class=MsoNormal><img width=364 height=364 id="KĂ©p 1"
 src="Voros_Imre_embed_elemei/image001.jpg"></p>
 
 </div>
