--- a/Pattantyus_Abraham_Geza_embed.html
+++ b/Pattantyus_Abraham_Geza_embed.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta charset="utf-8">
-<meta http-equiv=Content-Type content="text/html">
+<meta http-equiv=Content-Type content="text/html"
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
