--- a/Arany_Janos_embed.html
+++ b/Arany_Janos_embed.html
@@ -175,7 +175,7 @@ budapesti jótékonysági egylet tiszteletbeli tagja</p>
 bölcsészhallgatókat segítõ egyesület bizottságának tiszteletbeli tagja</p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><img width=224
-height=225 id="Kép 1" src="Arany_Janos.jpg"></p>
+height=225 id="Kép 1" src="Arany_Janos_elemei/image001.jpg"></p>
 
 </div>
 
