--- a/Frey_Tamás.html
+++ b/Frey_Tamás.html
@@ -16,6 +16,6 @@
             <li><a href="Főépület_Földszint.html">Vissza</a></li>
         </ul>
         <a rel='nofollow' href='https://hu.qr-code-generator.com/
-            ' border='0' style='cursor:default'></a><img src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fwww.example.com&chs=180x180&choe=UTF-8&chld=L|2' alt=''>
+            ' border='0' style='cursor:default'><img src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fwww.example.com&chs=180x180&choe=UTF-8&chld=L|2' alt=''></a>
     </body>
 </html>
