--- a/Széchenyi_István.html
+++ b/Széchenyi_István.html
@@ -15,5 +15,6 @@
             <li><a href="index.html">Vissza az udvarra</a></li>
             <li><a href="Főépület_Földszint.html">Vissza</a></li>
         </ul>
+        <img src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fwww.example.com&chs=180x180&choe=UTF-8&chld=L|2' alt=''>
     </body>
 </html>
