--- a/Dialóg.html
+++ b/Dialóg.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="gszi.css">
         <title>
-            Arany János
+            Dialóg
         </title>
     </head>
     <body>
