--- a/D_épület.html
+++ b/D_épület.html
@@ -16,7 +16,7 @@
             <li><a href="index.html">Vissza</a></li>
         </ul>
         <a href="oveges_jozsef.html"><div id="negyzet" style="position: absolute; left:1250px; top: 420px; width: 200px; height: 200px; border:2px solid #000;">Öveges József</div></a>
-        <a href=""><div id="negyzet" style="position: absolute; left:900px; top: 420px; width: 200px; height: 200px; border:2px solid #000;">WIP</div></a>
+        <a href="szilard.html"><div id="negyzet" style="position: absolute; left:900px; top: 420px; width: 200px; height: 200px; border:2px solid #000;">Szilárd Leó</div></a>
         <div id="negyzet" style="position: absolute; left:1102px; top: 420px; width: 146px; height: 130px; border:2px solid #000;">WC-k</div>
         <div id="negyzet" style="position: absolute; left:1102px; top: 552px; width: 146px; height: 68px; border:2px solid #000;"></div>
         <a href="hardver.html"><div id="negyzet" style="position: absolute; left:698px; top: 420px; width: 200px; height: 200px; border:2px solid #000;">Hardver</div></a>
