--- a/szilard.html
+++ b/szilard.html
@@ -13,7 +13,7 @@
         </div>
         <ul id="me">
             <li><a href="index.html">Vissza az udvarra</a></li>
-            <li><a href="D_épület..html">Vissza</a></li>
+            <li><a href="D_épület.html">Vissza</a></li>
       </ul>
     </body>
 </html>
