--- a/Kalmár_László.html
+++ b/Kalmár_László.html
@@ -15,5 +15,6 @@
             <li><a href="index.html">Vissza az udvarra</a></li>
             <li><a href="Főépület_Földszint.html">Vissza</a></li>
         </ul>
+        <iframe src="kalmar_laszlo_embed.html"></iframe>
     </body>
 </html>
