--- a/Frey_Tamás.html
+++ b/Frey_Tamás.html
@@ -15,5 +15,6 @@
             <li><a href="index.html">Vissza az udvarra</a></li>
             <li><a href="Főépület_Földszint.html">Vissza</a></li>
         </ul>
+        <iframe src="frey_tamas_embed.html"></iframe>
     </body>
 </html>
