--- a/frey_tamas_embed.html
+++ b/frey_tamas_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -26,7 +27,7 @@
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 h1
-	{mso-style-link:"Címsor 1 Char";
+	{mso-style-link:"CĂ­msor 1 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:24.0pt;
@@ -40,7 +41,7 @@ h1
 	color:#731C3F;
 	font-weight:normal;}
 h2
-	{mso-style-link:"Címsor 2 Char";
+	{mso-style-link:"CĂ­msor 2 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -51,7 +52,7 @@ h2
 	font-family:"Calibri",sans-serif;
 	color:#7F7F7F;}
 h3
-	{mso-style-link:"Címsor 3 Char";
+	{mso-style-link:"CĂ­msor 3 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -63,7 +64,7 @@ h3
 	color:#595959;
 	font-weight:normal;}
 h4
-	{mso-style-link:"Címsor 4 Char";
+	{mso-style-link:"CĂ­msor 4 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -76,7 +77,7 @@ h4
 	font-weight:normal;
 	font-style:italic;}
 h5
-	{mso-style-link:"Címsor 5 Char";
+	{mso-style-link:"CĂ­msor 5 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -88,7 +89,7 @@ h5
 	color:#262626;
 	font-weight:normal;}
 h6
-	{mso-style-link:"Címsor 6 Char";
+	{mso-style-link:"CĂ­msor 6 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -101,7 +102,7 @@ h6
 	font-weight:normal;
 	font-style:italic;}
 p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
-	{mso-style-link:"Címsor 7 Char";
+	{mso-style-link:"CĂ­msor 7 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -112,7 +113,7 @@ p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
-	{mso-style-link:"Címsor 8 Char";
+	{mso-style-link:"CĂ­msor 8 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -124,7 +125,7 @@ p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
 	color:#595959;
 	font-style:italic;}
 p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
-	{mso-style-link:"Címsor 9 Char";
+	{mso-style-link:"CĂ­msor 9 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -135,14 +136,14 @@ p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
-	{mso-style-link:"Élőfej Char";
+	{mso-style-link:"Ă‰lĂµfej Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:15.0pt;
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
-	{mso-style-link:"Élőláb Char";
+	{mso-style-link:"Ă‰lĂµlĂˇb Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:15.0pt;
@@ -178,7 +179,7 @@ p.MsoListNumber, li.MsoListNumber, div.MsoListNumber
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoTitle, li.MsoTitle, div.MsoTitle
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:3.0pt;
@@ -188,7 +189,7 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:33.0pt;
@@ -196,7 +197,7 @@ p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:33.0pt;
@@ -204,7 +205,7 @@ p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:3.0pt;
@@ -214,7 +215,7 @@ p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:26.0pt;
@@ -225,7 +226,7 @@ p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpFirst, li.MsoSubtitleCxSpFirst, div.MsoSubtitleCxSpFirst
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	line-height:107%;
@@ -234,7 +235,7 @@ p.MsoSubtitleCxSpFirst, li.MsoSubtitleCxSpFirst, div.MsoSubtitleCxSpFirst
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpMiddle, li.MsoSubtitleCxSpMiddle, div.MsoSubtitleCxSpMiddle
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	line-height:107%;
@@ -243,7 +244,7 @@ p.MsoSubtitleCxSpMiddle, li.MsoSubtitleCxSpMiddle, div.MsoSubtitleCxSpMiddle
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpLast, li.MsoSubtitleCxSpLast, div.MsoSubtitleCxSpLast
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:26.0pt;
@@ -266,7 +267,7 @@ em
 span.MsoPlaceholderText
 	{color:gray;}
 p.MsoQuote, li.MsoQuote, div.MsoQuote
-	{mso-style-link:"Idézet Char";
+	{mso-style-link:"IdĂ©zet Char";
 	margin-top:12.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -277,7 +278,7 @@ p.MsoQuote, li.MsoQuote, div.MsoQuote
 	color:#595959;
 	font-style:italic;}
 p.MsoIntenseQuote, li.MsoIntenseQuote, div.MsoIntenseQuote
-	{mso-style-link:"Kiemelt idézet Char";
+	{mso-style-link:"Kiemelt idĂ©zet Char";
 	margin-top:12.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -323,74 +324,74 @@ p.MsoTocHeading, li.MsoTocHeading, div.MsoTocHeading
 	font-family:"Calibri",sans-serif;
 	color:#731C3F;}
 span.Cmsor1Char
-	{mso-style-name:"Címsor 1 Char";
-	mso-style-link:"Címsor 1";
+	{mso-style-name:"CĂ­msor 1 Char";
+	mso-style-link:"CĂ­msor 1";
 	font-family:"Calibri",sans-serif;
 	color:#731C3F;}
 span.lfejChar
-	{mso-style-name:"Élőfej Char";
-	mso-style-link:Élőfej;}
+	{mso-style-name:"Ă‰lĂµfej Char";
+	mso-style-link:Ă‰lĂµfej;}
 span.llbChar
-	{mso-style-name:"Élőláb Char";
-	mso-style-link:Élőláb;}
+	{mso-style-name:"Ă‰lĂµlĂˇb Char";
+	mso-style-link:Ă‰lĂµlĂˇb;}
 span.CmChar
-	{mso-style-name:"Cím Char";
-	mso-style-link:Cím;
+	{mso-style-name:"CĂ­m Char";
+	mso-style-link:CĂ­m;
 	font-family:"Calibri",sans-serif;
 	color:#262626;
 	text-transform:uppercase;}
 span.AlcmChar
-	{mso-style-name:"Alcím Char";
-	mso-style-link:Alcím;
+	{mso-style-name:"AlcĂ­m Char";
+	mso-style-link:AlcĂ­m;
 	font-family:"Times New Roman",serif;
 	text-transform:uppercase;}
 span.Cmsor2Char
-	{mso-style-name:"Címsor 2 Char";
-	mso-style-link:"Címsor 2";
+	{mso-style-name:"CĂ­msor 2 Char";
+	mso-style-link:"CĂ­msor 2";
 	font-family:"Calibri",sans-serif;
 	color:#7F7F7F;
 	font-weight:bold;}
 span.Cmsor3Char
-	{mso-style-name:"Címsor 3 Char";
-	mso-style-link:"Címsor 3";
+	{mso-style-name:"CĂ­msor 3 Char";
+	mso-style-link:"CĂ­msor 3";
 	font-family:"Calibri",sans-serif;}
 span.Cmsor4Char
-	{mso-style-name:"Címsor 4 Char";
-	mso-style-link:"Címsor 4";
+	{mso-style-name:"CĂ­msor 4 Char";
+	mso-style-link:"CĂ­msor 4";
 	font-family:"Calibri",sans-serif;
 	font-style:italic;}
 span.Cmsor5Char
-	{mso-style-name:"Címsor 5 Char";
-	mso-style-link:"Címsor 5";
+	{mso-style-name:"CĂ­msor 5 Char";
+	mso-style-link:"CĂ­msor 5";
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 span.Cmsor6Char
-	{mso-style-name:"Címsor 6 Char";
-	mso-style-link:"Címsor 6";
+	{mso-style-name:"CĂ­msor 6 Char";
+	mso-style-link:"CĂ­msor 6";
 	font-family:"Calibri",sans-serif;
 	color:#262626;
 	font-style:italic;}
 span.Cmsor7Char
-	{mso-style-name:"Címsor 7 Char";
-	mso-style-link:"Címsor 7";
+	{mso-style-name:"CĂ­msor 7 Char";
+	mso-style-link:"CĂ­msor 7";
 	font-family:"Calibri",sans-serif;}
 span.Cmsor8Char
-	{mso-style-name:"Címsor 8 Char";
-	mso-style-link:"Címsor 8";
+	{mso-style-name:"CĂ­msor 8 Char";
+	mso-style-link:"CĂ­msor 8";
 	font-family:"Calibri",sans-serif;
 	font-style:italic;}
 span.Cmsor9Char
-	{mso-style-name:"Címsor 9 Char";
-	mso-style-link:"Címsor 9";
+	{mso-style-name:"CĂ­msor 9 Char";
+	mso-style-link:"CĂ­msor 9";
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 span.IdzetChar
-	{mso-style-name:"Idézet Char";
-	mso-style-link:Idézet;
+	{mso-style-name:"IdĂ©zet Char";
+	mso-style-link:IdĂ©zet;
 	font-style:italic;}
 span.KiemeltidzetChar
-	{mso-style-name:"Kiemelt idézet Char";
-	mso-style-link:"Kiemelt idézet";
+	{mso-style-name:"Kiemelt idĂ©zet Char";
+	mso-style-link:"Kiemelt idĂ©zet";
 	font-weight:bold;
 	font-style:italic;}
 .MsoChpDefault
@@ -422,7 +423,7 @@ ul
 
 <div style='border:none;border-bottom:solid #56152F 1.5pt;padding:0cm 0cm 12.0pt 0cm'>
 
-<h1 align=center style='text-align:center'><span lang=EN-US>Frey Tamás</span></h1>
+<h1 align=center style='text-align:center'><span lang=EN-US>Frey TamĂˇs</span></h1>
 
 </div>
 
@@ -443,58 +444,58 @@ ul
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='color:#54A2C3'>Ez egy informatikai terem ahol csoportra bontva vannak az
-osztályok.</span></p>
+osztĂˇlyok.</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:10.0pt;line-height:107%;color:black'>Születési dátum:1927.</span></p>
+style='font-size:10.0pt;line-height:107%;color:black'>SzĂĽletĂ©si dĂˇtum:1927.</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:10.0pt;line-height:107%;color:black'>Születési hely:Pécs</span></p>
+style='font-size:10.0pt;line-height:107%;color:black'>SzĂĽletĂ©si hely:PĂ©cs</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:10.0pt;line-height:107%;color:black'>Halálozási dátum:1978.</span></p>
+style='font-size:10.0pt;line-height:107%;color:black'>HalĂˇlozĂˇsi dĂˇtum:1978.</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:10.0pt;line-height:107%;color:black'>Végzettség,
-szakképesítés:</span></p>
+style='font-size:10.0pt;line-height:107%;color:black'>VĂ©gzettsĂ©g,
+szakkĂ©pesĂ­tĂ©s:</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:10.0pt;line-height:107%;color:black'>villamosmérnök -
-Budapesti Műszaki Egyetem - 1950.</span></p>
+style='font-size:10.0pt;line-height:107%;color:black'>villamosmĂ©rnĂ¶k -
+Budapesti MĂ»szaki Egyetem - 1950.</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='font-size:10.0pt;line-height:107%;color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:10.0pt;line-height:107%;
-color:black'>Diplomája megszerzése után tanársegéd a BME egyik matematikai
-tanszékén. 1951-től az MTA Alkalmazott Matematikai Intézetében aspiráns.
-1956-ban kandidátus. Az első hazai elektronikus számítógép, az M-3 megépítése
-idején az MTA Kibernetikei Kibernetikai Kutatócsoportjának (KKCS) munkatársa,
-majd 1962-től az utódintézmény, az MTA Számítástechnikai Központ (SZK)
-osztályvezetője, 1963-tól igazgatója. 1968-ban megvédi „Automaták,
-algoritmusok, optimalizálásuk és approximációjuk” c. nagydoktori
-disszertációját, amely a számítástudomány alapjaihoz kötődő első hazai
+color:black'>DiplomĂˇja megszerzĂ©se utĂˇn tanĂˇrsegĂ©d a BME egyik matematikai
+tanszĂ©kĂ©n. 1951-tĂµl az MTA Alkalmazott Matematikai IntĂ©zetĂ©ben aspirĂˇns.
+1956-ban kandidĂˇtus. Az elsĂµ hazai elektronikus szĂˇmĂ­tĂłgĂ©p, az M-3 megĂ©pĂ­tĂ©se
+idejĂ©n az MTA Kibernetikei Kibernetikai KutatĂłcsoportjĂˇnak (KKCS) munkatĂˇrsa,
+majd 1962-tĂµl az utĂłdintĂ©zmĂ©ny, az MTA SzĂˇmĂ­tĂˇstechnikai KĂ¶zpont (SZK)
+osztĂˇlyvezetĂµje, 1963-tĂłl igazgatĂłja. 1968-ban megvĂ©di Â„AutomatĂˇk,
+algoritmusok, optimalizĂˇlĂˇsuk Ă©s approximĂˇciĂłjukÂ” c. nagydoktori
+disszertĂˇciĂłjĂˇt, amely a szĂˇmĂ­tĂˇstudomĂˇny alapjaihoz kĂ¶tĂµdĂµ elsĂµ hazai
 nagydoktori munka. .</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:10.0pt;line-height:107%;
-color:black'>1969-ben a BME Villamosmérnök Kar (VIK) Matematikai Tanszékének
-egyetemi tanára, egyben az MTA Számítástechnikai és Automatizálási Kutató
-Intézet (SZTAKI) tudományos főtanácsadója. (A BME 1959/60-as tanévében első
-oktatója az akkor bevezetett Számológépek programozásának elméleti és
-gyakorlati kérdései c. választható tárgynak.)</span></p>
+color:black'>1969-ben a BME VillamosmĂ©rnĂ¶k Kar (VIK) Matematikai TanszĂ©kĂ©nek
+egyetemi tanĂˇra, egyben az MTA SzĂˇmĂ­tĂˇstechnikai Ă©s AutomatizĂˇlĂˇsi KutatĂł
+IntĂ©zet (SZTAKI) tudomĂˇnyos fĂµtanĂˇcsadĂłja. (A BME 1959/60-as tanĂ©vĂ©ben elsĂµ
+oktatĂłja az akkor bevezetett SzĂˇmolĂłgĂ©pek programozĂˇsĂˇnak elmĂ©leti Ă©s
+gyakorlati kĂ©rdĂ©sei c. vĂˇlaszthatĂł tĂˇrgynak.)</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:10.0pt;line-height:107%;
 color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:10.0pt;line-height:107%;
-color:black'>Főbb kutatási területei: biológiai jelek szimulációja, orvosi
-diagnosztikai problémák, programozáselmélet, matematikai nyelvészet.
-Eredményesen művelt orvosi témái: elektromiográfiás aktivitások
-klinikai-diagnosztikai célú matematikai analízisrendszere, új eljárás a
-kvázistacionárius bioelektromos folyamatok analízisére, a központi idegrendszer
-elektromos aktivitásai matematikai modellrendszere, gépi klinikai diagnosztika.
-Szabadalma: egy görbeletapogató, amely különösen alkalmas biológiai jelek
-feldolgozására.</span></p>
+color:black'>FĂµbb kutatĂˇsi terĂĽletei: biolĂłgiai jelek szimulĂˇciĂłja, orvosi
+diagnosztikai problĂ©mĂˇk, programozĂˇselmĂ©let, matematikai nyelvĂ©szet.
+EredmĂ©nyesen mĂ»velt orvosi tĂ©mĂˇi: elektromiogrĂˇfiĂˇs aktivitĂˇsok
+klinikai-diagnosztikai cĂ©lĂş matematikai analĂ­zisrendszere, Ăşj eljĂˇrĂˇs a
+kvĂˇzistacionĂˇrius bioelektromos folyamatok analĂ­zisĂ©re, a kĂ¶zponti idegrendszer
+elektromos aktivitĂˇsai matematikai modellrendszere, gĂ©pi klinikai diagnosztika.
+Szabadalma: egy gĂ¶rbeletapogatĂł, amely kĂĽlĂ¶nĂ¶sen alkalmas biolĂłgiai jelek
+feldolgozĂˇsĂˇra.</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:10.0pt;line-height:107%;
 color:black'>&nbsp;</span></p>
