--- a/kalmar_laszlo_embed.html
+++ b/kalmar_laszlo_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -26,7 +27,7 @@
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 h1
-	{mso-style-link:"Címsor 1 Char";
+	{mso-style-link:"CĂ­msor 1 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:24.0pt;
@@ -40,7 +41,7 @@ h1
 	color:#731C3F;
 	font-weight:normal;}
 h2
-	{mso-style-link:"Címsor 2 Char";
+	{mso-style-link:"CĂ­msor 2 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -52,7 +53,7 @@ h2
 	color:#7F7F7F;
 	font-weight:bold;}
 h3
-	{mso-style-link:"Címsor 3 Char";
+	{mso-style-link:"CĂ­msor 3 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -64,7 +65,7 @@ h3
 	color:#595959;
 	font-weight:normal;}
 h4
-	{mso-style-link:"Címsor 4 Char";
+	{mso-style-link:"CĂ­msor 4 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -77,7 +78,7 @@ h4
 	font-weight:normal;
 	font-style:italic;}
 h5
-	{mso-style-link:"Címsor 5 Char";
+	{mso-style-link:"CĂ­msor 5 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -89,7 +90,7 @@ h5
 	color:#262626;
 	font-weight:normal;}
 h6
-	{mso-style-link:"Címsor 6 Char";
+	{mso-style-link:"CĂ­msor 6 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -102,7 +103,7 @@ h6
 	font-weight:normal;
 	font-style:italic;}
 p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
-	{mso-style-link:"Címsor 7 Char";
+	{mso-style-link:"CĂ­msor 7 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -113,7 +114,7 @@ p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
-	{mso-style-link:"Címsor 8 Char";
+	{mso-style-link:"CĂ­msor 8 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -125,7 +126,7 @@ p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
 	color:#595959;
 	font-style:italic;}
 p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
-	{mso-style-link:"Címsor 9 Char";
+	{mso-style-link:"CĂ­msor 9 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -136,14 +137,14 @@ p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
-	{mso-style-link:"Élőfej Char";
+	{mso-style-link:"Ă‰lĂµfej Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:15.0pt;
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
-	{mso-style-link:"Élőláb Char";
+	{mso-style-link:"Ă‰lĂµlĂˇb Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:15.0pt;
@@ -179,7 +180,7 @@ p.MsoListNumber, li.MsoListNumber, div.MsoListNumber
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoTitle, li.MsoTitle, div.MsoTitle
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:3.0pt;
@@ -189,7 +190,7 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:33.0pt;
@@ -197,7 +198,7 @@ p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:33.0pt;
@@ -205,7 +206,7 @@ p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:3.0pt;
@@ -215,7 +216,7 @@ p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:26.0pt;
@@ -226,7 +227,7 @@ p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpFirst, li.MsoSubtitleCxSpFirst, div.MsoSubtitleCxSpFirst
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	line-height:107%;
@@ -235,7 +236,7 @@ p.MsoSubtitleCxSpFirst, li.MsoSubtitleCxSpFirst, div.MsoSubtitleCxSpFirst
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpMiddle, li.MsoSubtitleCxSpMiddle, div.MsoSubtitleCxSpMiddle
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	line-height:107%;
@@ -244,7 +245,7 @@ p.MsoSubtitleCxSpMiddle, li.MsoSubtitleCxSpMiddle, div.MsoSubtitleCxSpMiddle
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpLast, li.MsoSubtitleCxSpLast, div.MsoSubtitleCxSpLast
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:26.0pt;
@@ -272,7 +273,7 @@ p
 span.MsoPlaceholderText
 	{color:gray;}
 p.MsoQuote, li.MsoQuote, div.MsoQuote
-	{mso-style-link:"Idézet Char";
+	{mso-style-link:"IdĂ©zet Char";
 	margin-top:12.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -283,7 +284,7 @@ p.MsoQuote, li.MsoQuote, div.MsoQuote
 	color:#595959;
 	font-style:italic;}
 p.MsoIntenseQuote, li.MsoIntenseQuote, div.MsoIntenseQuote
-	{mso-style-link:"Kiemelt idézet Char";
+	{mso-style-link:"Kiemelt idĂ©zet Char";
 	margin-top:12.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -329,74 +330,74 @@ p.MsoTocHeading, li.MsoTocHeading, div.MsoTocHeading
 	font-family:"Calibri",sans-serif;
 	color:#731C3F;}
 span.Cmsor1Char
-	{mso-style-name:"Címsor 1 Char";
-	mso-style-link:"Címsor 1";
+	{mso-style-name:"CĂ­msor 1 Char";
+	mso-style-link:"CĂ­msor 1";
 	font-family:"Calibri",sans-serif;
 	color:#731C3F;}
 span.lfejChar
-	{mso-style-name:"Élőfej Char";
-	mso-style-link:Élőfej;}
+	{mso-style-name:"Ă‰lĂµfej Char";
+	mso-style-link:Ă‰lĂµfej;}
 span.llbChar
-	{mso-style-name:"Élőláb Char";
-	mso-style-link:Élőláb;}
+	{mso-style-name:"Ă‰lĂµlĂˇb Char";
+	mso-style-link:Ă‰lĂµlĂˇb;}
 span.CmChar
-	{mso-style-name:"Cím Char";
-	mso-style-link:Cím;
+	{mso-style-name:"CĂ­m Char";
+	mso-style-link:CĂ­m;
 	font-family:"Calibri",sans-serif;
 	color:#262626;
 	text-transform:uppercase;}
 span.AlcmChar
-	{mso-style-name:"Alcím Char";
-	mso-style-link:Alcím;
+	{mso-style-name:"AlcĂ­m Char";
+	mso-style-link:AlcĂ­m;
 	font-family:"Times New Roman",serif;
 	text-transform:uppercase;}
 span.Cmsor2Char
-	{mso-style-name:"Címsor 2 Char";
-	mso-style-link:"Címsor 2";
+	{mso-style-name:"CĂ­msor 2 Char";
+	mso-style-link:"CĂ­msor 2";
 	font-family:"Calibri",sans-serif;
 	color:#7F7F7F;
 	font-weight:bold;}
 span.Cmsor3Char
-	{mso-style-name:"Címsor 3 Char";
-	mso-style-link:"Címsor 3";
+	{mso-style-name:"CĂ­msor 3 Char";
+	mso-style-link:"CĂ­msor 3";
 	font-family:"Calibri",sans-serif;}
 span.Cmsor4Char
-	{mso-style-name:"Címsor 4 Char";
-	mso-style-link:"Címsor 4";
+	{mso-style-name:"CĂ­msor 4 Char";
+	mso-style-link:"CĂ­msor 4";
 	font-family:"Calibri",sans-serif;
 	font-style:italic;}
 span.Cmsor5Char
-	{mso-style-name:"Címsor 5 Char";
-	mso-style-link:"Címsor 5";
+	{mso-style-name:"CĂ­msor 5 Char";
+	mso-style-link:"CĂ­msor 5";
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 span.Cmsor6Char
-	{mso-style-name:"Címsor 6 Char";
-	mso-style-link:"Címsor 6";
+	{mso-style-name:"CĂ­msor 6 Char";
+	mso-style-link:"CĂ­msor 6";
 	font-family:"Calibri",sans-serif;
 	color:#262626;
 	font-style:italic;}
 span.Cmsor7Char
-	{mso-style-name:"Címsor 7 Char";
-	mso-style-link:"Címsor 7";
+	{mso-style-name:"CĂ­msor 7 Char";
+	mso-style-link:"CĂ­msor 7";
 	font-family:"Calibri",sans-serif;}
 span.Cmsor8Char
-	{mso-style-name:"Címsor 8 Char";
-	mso-style-link:"Címsor 8";
+	{mso-style-name:"CĂ­msor 8 Char";
+	mso-style-link:"CĂ­msor 8";
 	font-family:"Calibri",sans-serif;
 	font-style:italic;}
 span.Cmsor9Char
-	{mso-style-name:"Címsor 9 Char";
-	mso-style-link:"Címsor 9";
+	{mso-style-name:"CĂ­msor 9 Char";
+	mso-style-link:"CĂ­msor 9";
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 span.IdzetChar
-	{mso-style-name:"Idézet Char";
-	mso-style-link:Idézet;
+	{mso-style-name:"IdĂ©zet Char";
+	mso-style-link:IdĂ©zet;
 	font-style:italic;}
 span.KiemeltidzetChar
-	{mso-style-name:"Kiemelt idézet Char";
-	mso-style-link:"Kiemelt idézet";
+	{mso-style-name:"Kiemelt idĂ©zet Char";
+	mso-style-link:"Kiemelt idĂ©zet";
 	font-weight:bold;
 	font-style:italic;}
 .MsoChpDefault
@@ -441,37 +442,37 @@ ul
 </table>
 
 <br clear=ALL>
-<span lang=EN-US>Kalmár László</span></h1>
+<span lang=EN-US>KalmĂˇr LĂˇszlĂł</span></h1>
 
 </div>
 
-<p class=MsoNormal><span lang=EN-US style='color:#54A2C3'>A Kalmár Lászlóban
-legföképpen informatikai csoportos órák szoktak lenni.</span></p>
+<p class=MsoNormal><span lang=EN-US style='color:#54A2C3'>A KalmĂˇr LĂˇszlĂłban
+legfĂ¶kĂ©ppen informatikai csoportos ĂłrĂˇk szoktak lenni.</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;line-height:107%;
-color:windowtext'>A 20. század utolsó évtizedeiben bekövetkező
-információrobbanás egyik előfutára és előkészítője volt a matematikai logika és
-a számítástudomány területén. E területeken kifejtett elméleteinek (játékelmélet,
-algoritmusok) még a létjogosultságáért is meg kellett küzdenie. 1962-ben életre
-hívhatta a Kibernetikai Laboratóriumot, amelyben 1964-ben már számítógép
-működött. Ez a Laboratórium és Kalmár László Számítástudományi Tanszéke képezte
-alapját a mai Informatikai Tanszékcsoportnak a szegedi egyetemen, ahol
-programtervező és programozómatematikusok képzése folyik. Kalmár László
-idejében alkalmazott matematikusok képzéséről beszéltek, de ezt tette Kalmár
-László már 1957-től kezdve, nála meg lehetett ismerkedni a kibernetika legújabb
-eredményeivel.</span></p>
+color:windowtext'>A 20. szĂˇzad utolsĂł Ă©vtizedeiben bekĂ¶vetkezĂµ
+informĂˇciĂłrobbanĂˇs egyik elĂµfutĂˇra Ă©s elĂµkĂ©szĂ­tĂµje volt a matematikai logika Ă©s
+a szĂˇmĂ­tĂˇstudomĂˇny terĂĽletĂ©n. E terĂĽleteken kifejtett elmĂ©leteinek (jĂˇtĂ©kelmĂ©let,
+algoritmusok) mĂ©g a lĂ©tjogosultsĂˇgĂˇĂ©rt is meg kellett kĂĽzdenie. 1962-ben Ă©letre
+hĂ­vhatta a Kibernetikai LaboratĂłriumot, amelyben 1964-ben mĂˇr szĂˇmĂ­tĂłgĂ©p
+mĂ»kĂ¶dĂ¶tt. Ez a LaboratĂłrium Ă©s KalmĂˇr LĂˇszlĂł SzĂˇmĂ­tĂˇstudomĂˇnyi TanszĂ©ke kĂ©pezte
+alapjĂˇt a mai Informatikai TanszĂ©kcsoportnak a szegedi egyetemen, ahol
+programtervezĂµ Ă©s programozĂłmatematikusok kĂ©pzĂ©se folyik. KalmĂˇr LĂˇszlĂł
+idejĂ©ben alkalmazott matematikusok kĂ©pzĂ©sĂ©rĂµl beszĂ©ltek, de ezt tette KalmĂˇr
+LĂˇszlĂł mĂˇr 1957-tĂµl kezdve, nĂˇla meg lehetett ismerkedni a kibernetika legĂşjabb
+eredmĂ©nyeivel.</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;line-height:107%;
 color:windowtext'>&nbsp;</span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;line-height:107%;
-color:windowtext'>1956-ban a szegedi Bolyai Intézet keretében alakult meg az
-MTA Matematikai Kutató Intézetének Funkcionálanalízis Osztálya Szőkefalvi-Nagy
-Béla vezetésével, 1957-től pedig az MTA Matematikai Kutatóintézetének Matematikai
-Logika és Alkalmazásai csoportja (1958-tól Osztálya) Kalmár László vezetésével.
-E két kutatási egység 1967. január 1-jétől az MTA Analízis Tanszéki
-Kutatócsoportjává, illetve az MTA Matematikai Logikai és Automataelméleti
-Kutatócsoportjává alakult át.</span></p>
+color:windowtext'>1956-ban a szegedi Bolyai IntĂ©zet keretĂ©ben alakult meg az
+MTA Matematikai KutatĂł IntĂ©zetĂ©nek FunkcionĂˇlanalĂ­zis OsztĂˇlya SzĂµkefalvi-Nagy
+BĂ©la vezetĂ©sĂ©vel, 1957-tĂµl pedig az MTA Matematikai KutatĂłintĂ©zetĂ©nek Matematikai
+Logika Ă©s AlkalmazĂˇsai csoportja (1958-tĂłl OsztĂˇlya) KalmĂˇr LĂˇszlĂł vezetĂ©sĂ©vel.
+E kĂ©t kutatĂˇsi egysĂ©g 1967. januĂˇr 1-jĂ©tĂµl az MTA AnalĂ­zis TanszĂ©ki
+KutatĂłcsoportjĂˇvĂˇ, illetve az MTA Matematikai Logikai Ă©s AutomataelmĂ©leti
+KutatĂłcsoportjĂˇvĂˇ alakult Ăˇt.</span></p>
 
 </div>
 
