--- a/neumann_jani_embed.html
+++ b/neumann_jani_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -26,7 +27,7 @@
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 h1
-	{mso-style-link:"Címsor 1 Char";
+	{mso-style-link:"CĂ­msor 1 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:24.0pt;
@@ -40,7 +41,7 @@ h1
 	color:#731C3F;
 	font-weight:normal;}
 h2
-	{mso-style-link:"Címsor 2 Char";
+	{mso-style-link:"CĂ­msor 2 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -51,7 +52,7 @@ h2
 	font-family:"Calibri",sans-serif;
 	color:#7F7F7F;}
 h3
-	{mso-style-link:"Címsor 3 Char";
+	{mso-style-link:"CĂ­msor 3 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -63,7 +64,7 @@ h3
 	color:#595959;
 	font-weight:normal;}
 h4
-	{mso-style-link:"Címsor 4 Char";
+	{mso-style-link:"CĂ­msor 4 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -76,7 +77,7 @@ h4
 	font-weight:normal;
 	font-style:italic;}
 h5
-	{mso-style-link:"Címsor 5 Char";
+	{mso-style-link:"CĂ­msor 5 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -88,7 +89,7 @@ h5
 	color:#262626;
 	font-weight:normal;}
 h6
-	{mso-style-link:"Címsor 6 Char";
+	{mso-style-link:"CĂ­msor 6 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -101,7 +102,7 @@ h6
 	font-weight:normal;
 	font-style:italic;}
 p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
-	{mso-style-link:"Címsor 7 Char";
+	{mso-style-link:"CĂ­msor 7 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -112,7 +113,7 @@ p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
-	{mso-style-link:"Címsor 8 Char";
+	{mso-style-link:"CĂ­msor 8 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -124,7 +125,7 @@ p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
 	color:#595959;
 	font-style:italic;}
 p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
-	{mso-style-link:"Címsor 9 Char";
+	{mso-style-link:"CĂ­msor 9 Char";
 	margin-top:23.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -135,14 +136,14 @@ p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
-	{mso-style-link:"Élőfej Char";
+	{mso-style-link:"Ă‰lĂµfej Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:15.0pt;
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
-	{mso-style-link:"Élőláb Char";
+	{mso-style-link:"Ă‰lĂµlĂˇb Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:15.0pt;
@@ -178,7 +179,7 @@ p.MsoListNumber, li.MsoListNumber, div.MsoListNumber
 	font-family:"Calibri",sans-serif;
 	color:#595959;}
 p.MsoTitle, li.MsoTitle, div.MsoTitle
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:3.0pt;
@@ -188,7 +189,7 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:33.0pt;
@@ -196,7 +197,7 @@ p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:33.0pt;
@@ -204,7 +205,7 @@ p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
-	{mso-style-link:"Cím Char";
+	{mso-style-link:"CĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:3.0pt;
@@ -214,7 +215,7 @@ p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:26.0pt;
@@ -225,7 +226,7 @@ p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpFirst, li.MsoSubtitleCxSpFirst, div.MsoSubtitleCxSpFirst
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	line-height:107%;
@@ -234,7 +235,7 @@ p.MsoSubtitleCxSpFirst, li.MsoSubtitleCxSpFirst, div.MsoSubtitleCxSpFirst
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpMiddle, li.MsoSubtitleCxSpMiddle, div.MsoSubtitleCxSpMiddle
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	line-height:107%;
@@ -243,7 +244,7 @@ p.MsoSubtitleCxSpMiddle, li.MsoSubtitleCxSpMiddle, div.MsoSubtitleCxSpMiddle
 	color:#595959;
 	text-transform:uppercase;}
 p.MsoSubtitleCxSpLast, li.MsoSubtitleCxSpLast, div.MsoSubtitleCxSpLast
-	{mso-style-link:"Alcím Char";
+	{mso-style-link:"AlcĂ­m Char";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:26.0pt;
@@ -266,7 +267,7 @@ em
 span.MsoPlaceholderText
 	{color:gray;}
 p.MsoQuote, li.MsoQuote, div.MsoQuote
-	{mso-style-link:"Idézet Char";
+	{mso-style-link:"IdĂ©zet Char";
 	margin-top:12.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -277,7 +278,7 @@ p.MsoQuote, li.MsoQuote, div.MsoQuote
 	color:#595959;
 	font-style:italic;}
 p.MsoIntenseQuote, li.MsoIntenseQuote, div.MsoIntenseQuote
-	{mso-style-link:"Kiemelt idézet Char";
+	{mso-style-link:"Kiemelt idĂ©zet Char";
 	margin-top:12.0pt;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -323,74 +324,74 @@ p.MsoTocHeading, li.MsoTocHeading, div.MsoTocHeading
 	font-family:"Calibri",sans-serif;
 	color:#731C3F;}
 span.Cmsor1Char
-	{mso-style-name:"Címsor 1 Char";
-	mso-style-link:"Címsor 1";
+	{mso-style-name:"CĂ­msor 1 Char";
+	mso-style-link:"CĂ­msor 1";
 	font-family:"Calibri",sans-serif;
 	color:#731C3F;}
 span.lfejChar
-	{mso-style-name:"Élőfej Char";
-	mso-style-link:Élőfej;}
+	{mso-style-name:"Ă‰lĂµfej Char";
+	mso-style-link:Ă‰lĂµfej;}
 span.llbChar
-	{mso-style-name:"Élőláb Char";
-	mso-style-link:Élőláb;}
+	{mso-style-name:"Ă‰lĂµlĂˇb Char";
+	mso-style-link:Ă‰lĂµlĂˇb;}
 span.CmChar
-	{mso-style-name:"Cím Char";
-	mso-style-link:Cím;
+	{mso-style-name:"CĂ­m Char";
+	mso-style-link:CĂ­m;
 	font-family:"Calibri",sans-serif;
 	color:#262626;
 	text-transform:uppercase;}
 span.AlcmChar
-	{mso-style-name:"Alcím Char";
-	mso-style-link:Alcím;
+	{mso-style-name:"AlcĂ­m Char";
+	mso-style-link:AlcĂ­m;
 	font-family:"Times New Roman",serif;
 	text-transform:uppercase;}
 span.Cmsor2Char
-	{mso-style-name:"Címsor 2 Char";
-	mso-style-link:"Címsor 2";
+	{mso-style-name:"CĂ­msor 2 Char";
+	mso-style-link:"CĂ­msor 2";
 	font-family:"Calibri",sans-serif;
 	color:#7F7F7F;
 	font-weight:bold;}
 span.Cmsor3Char
-	{mso-style-name:"Címsor 3 Char";
-	mso-style-link:"Címsor 3";
+	{mso-style-name:"CĂ­msor 3 Char";
+	mso-style-link:"CĂ­msor 3";
 	font-family:"Calibri",sans-serif;}
 span.Cmsor4Char
-	{mso-style-name:"Címsor 4 Char";
-	mso-style-link:"Címsor 4";
+	{mso-style-name:"CĂ­msor 4 Char";
+	mso-style-link:"CĂ­msor 4";
 	font-family:"Calibri",sans-serif;
 	font-style:italic;}
 span.Cmsor5Char
-	{mso-style-name:"Címsor 5 Char";
-	mso-style-link:"Címsor 5";
+	{mso-style-name:"CĂ­msor 5 Char";
+	mso-style-link:"CĂ­msor 5";
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 span.Cmsor6Char
-	{mso-style-name:"Címsor 6 Char";
-	mso-style-link:"Címsor 6";
+	{mso-style-name:"CĂ­msor 6 Char";
+	mso-style-link:"CĂ­msor 6";
 	font-family:"Calibri",sans-serif;
 	color:#262626;
 	font-style:italic;}
 span.Cmsor7Char
-	{mso-style-name:"Címsor 7 Char";
-	mso-style-link:"Címsor 7";
+	{mso-style-name:"CĂ­msor 7 Char";
+	mso-style-link:"CĂ­msor 7";
 	font-family:"Calibri",sans-serif;}
 span.Cmsor8Char
-	{mso-style-name:"Címsor 8 Char";
-	mso-style-link:"Címsor 8";
+	{mso-style-name:"CĂ­msor 8 Char";
+	mso-style-link:"CĂ­msor 8";
 	font-family:"Calibri",sans-serif;
 	font-style:italic;}
 span.Cmsor9Char
-	{mso-style-name:"Címsor 9 Char";
-	mso-style-link:"Címsor 9";
+	{mso-style-name:"CĂ­msor 9 Char";
+	mso-style-link:"CĂ­msor 9";
 	font-family:"Calibri",sans-serif;
 	color:#262626;}
 span.IdzetChar
-	{mso-style-name:"Idézet Char";
-	mso-style-link:Idézet;
+	{mso-style-name:"IdĂ©zet Char";
+	mso-style-link:IdĂ©zet;
 	font-style:italic;}
 span.KiemeltidzetChar
-	{mso-style-name:"Kiemelt idézet Char";
-	mso-style-link:"Kiemelt idézet";
+	{mso-style-name:"Kiemelt idĂ©zet Char";
+	mso-style-link:"Kiemelt idĂ©zet";
 	font-weight:bold;
 	font-style:italic;}
 .MsoChpDefault
@@ -435,21 +436,21 @@ ul
 </table>
 
 <br clear=ALL>
-<span lang=EN-US>Neumann János</span></h1>
+<span lang=EN-US>Neumann JĂˇnos</span></h1>
 
 </div>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='font-size:18.0pt;line-height:107%;color:#54A2C3'>Ebben a teremben csoport
-bontásba vannak a osztályok és informatikai órák szoktak itt lenni</span></p>
+bontĂˇsba vannak a osztĂˇlyok Ă©s informatikai ĂłrĂˇk szoktak itt lenni</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='font-size:18.0pt;line-height:107%'>Margittai&nbsp;Neumann
-János&nbsp;(John von Neumann, született:&nbsp;Neumann János Lajos)
-(Budapest,&nbsp;Lipótváros,&nbsp;1903.&nbsp;December
-28.–&nbsp;Washington,&nbsp;1957.&nbsp;Február 8.) magyar születésű
-matematikus.&nbsp;Kvantummechanikai&nbsp;elméleti kutatásai mellett
-a&nbsp;digitális számítógép&nbsp;elvi alapjainak lefektetésével vált ismertté.</span></p>
+JĂˇnos&nbsp;(John von Neumann, szĂĽletett:&nbsp;Neumann JĂˇnos Lajos)
+(Budapest,&nbsp;LipĂłtvĂˇros,&nbsp;1903.&nbsp;December
+28.Â–&nbsp;Washington,&nbsp;1957.&nbsp;FebruĂˇr 8.) magyar szĂĽletĂ©sĂ»
+matematikus.&nbsp;Kvantummechanikai&nbsp;elmĂ©leti kutatĂˇsai mellett
+a&nbsp;digitĂˇlis szĂˇmĂ­tĂłgĂ©p&nbsp;elvi alapjainak lefektetĂ©sĂ©vel vĂˇlt ismerttĂ©.</span></p>
 
 </div>
 
